src/objects/Apttus_Config2__Order__c.object
<CustomObject>
    <description>Represents an order associated with an account</description>
    <fields>
        <fullName>Apttus_Config2__Accept__c</fullName>
        <description>Accept the order</description>
        <formula>IF (ISPICKVAL(Apttus_Config2__Status__c, &quot;Draft&quot;), HYPERLINK(&quot;/apex/Apttus_Config2__OrderAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accept the order</inlineHelpText>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActivatedDate__c</fullName>
        <description>The date the order is ready for activation. The order is activated on this date.</description>
        <inlineHelpText>The date the order is ready for activation. The order is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order will be automatically activated when the order is accepted.</description>
        <inlineHelpText>Indicates whether the order will be automatically activated when the order is accepted.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Bill To)</relationshipLabel>
        <relationshipName>OrdersBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CancelledDate__c</fullName>
        <description>The date when the order was cancelled</description>
        <inlineHelpText>The date when the order was cancelled</inlineHelpText>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletedDate__c</fullName>
        <description>The date when the order is closed. The order is completed on this date.</description>
        <inlineHelpText>The date when the order is closed. The order is completed on this date.</inlineHelpText>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the order</description>
        <inlineHelpText>Date when the configuration was synchronized for the order</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigureNG__c</fullName>
        <description>Configure products for the quote/proposal</description>
        <formula>IF ( LEN( Apttus_Config2__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_Config2__OrderConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=NGDefault&quot;, IMAGE(&quot;/resource/Apttus_Config2__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Configure products for the quote/proposal</inlineHelpText>
        <label>Configure Products (NG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The order description</description>
        <inlineHelpText>The order description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfilledDate__c</fullName>
        <description>The date the order is ready for fulfillment. The order is fulfilled on this date.</description>
        <inlineHelpText>The date the order is ready for fulfillment. The order is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the order</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the order</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderDate__c</fullName>
        <description>The order date</description>
        <inlineHelpText>The order date</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderEndDate__c</fullName>
        <description>The date at which the order ends</description>
        <inlineHelpText>The date at which the order ends</inlineHelpText>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderReferenceNumber__c</fullName>
        <description>Order reference number assigned to this order.</description>
        <externalId>true</externalId>
        <inlineHelpText>Order reference number assigned to this order.</inlineHelpText>
        <label>Order Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderStartDate__c</fullName>
        <description>The date at which the order becomes effective</description>
        <inlineHelpText>The date at which the order becomes effective</inlineHelpText>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PODate__c</fullName>
        <description>The purchase order date</description>
        <inlineHelpText>The purchase order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent order</description>
        <inlineHelpText>ID of the parent order</inlineHelpText>
        <label>Parent Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Child Orders</relationshipLabel>
        <relationshipName>ChildOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the order</description>
        <inlineHelpText>ID of the payment term associated with the order</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <inlineHelpText>ID of the associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingDate__c</fullName>
        <description>The pricing date. The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date. The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary contact associated with the order</description>
        <inlineHelpText>ID of the primary contact associated with the order</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForBillingDate__c</fullName>
        <description>The date when the order is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForRevRecDate__c</fullName>
        <description>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related opportunity</description>
        <inlineHelpText>ID of the related opportunity</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Ship To)</relationshipLabel>
        <relationshipName>OrdersShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Sold To)</relationshipLabel>
        <relationshipName>OrdersSoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Source__c</fullName>
        <description>The order source</description>
        <inlineHelpText>The order source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The order status</description>
        <inlineHelpText>The order status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>In Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Partially Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The type of order</description>
        <inlineHelpText>The type of order</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add On</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>